# cpp-testing

./: .gitmodules  CMakeLists.txt  setup.bat
.github/: README.md
include/: BaseState.h  Shader.h  SpriteBatch.h  TextRenderer.h  TextureLoader.h
include/objects/: FPSCounter.h  TextObject.h
include/objects/rhythm/: Strum.h
include/rhythm/: ChartManager.h  DifficultyCalculator.h  Playfield.h
include/states/: PlayState.h  SongSelectState.h
include/utils/: AudioManager.h  Logger.h  SettingsManager.h  Utils.h  Variables.h
src/: BaseState.cpp  Shader.cpp  SpriteBatch.cpp  TextRenderer.cpp  TextureLoader.cpp  main.cpp
src/objects/: FPSCounter.cpp  TextObject.cpp
src/objects/rhythm/: Strum.cpp
src/rhythm/: ChartManager.cpp  DifficultyCalculator.cpp  Playfield.cpp
src/states/: PlayState.cpp  SongSelectState.cpp
src/utils/: AudioManager.cpp  Logger.cpp  SettingsManager.cpp  Utils.cpp
tools/: compile.bat
